=============================================================================================
* 								radio reddit for android									*
=============================================================================================

Change log:

* 0.2 - Not released yet
- Removed GPS permissions (not intentionally added to begin with)
- Notification now shows talk show information
- Music service now runs in the foreground, will help prevent it from getting killed in low memory situations
- Changing stations now has streams broken down into two categories: music and talk stations. Stations sorted by name
- Added cache for getting stations: subsequent start up times has been reduced as it will load stations from the database cache if possible
- Added settings activity, compatibility mode option (for users with streaming issues)
- Added login to (radio) reddit activity
- Added voting functionality
- Added submitting a new song functionaility
- Added CAPTCHA support for submissions by new redditors (with low karma)
- Change some underworkings of PlaybackService/MediaPlayer. You can now change stations immediately without having to wait for the MediaPlayer object to re-prepare itself.
- Added a link to login activity to register a new reddit account
- Show cumulative score
- If not logged in, dialog gives option to go to Login activity


* 0.1 - July 6th, 2011
- Initial alpha release
 - Basic UI, for both phones and tablets (Android 3.0+)
 - Loads and displays all streams
 - Plays streams (music and talk)
 - Displays current song or episode information
 - Displays detailed episode information